--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
 *.iml
 .gradle
 /local.properties
+/.idea
 /.idea/caches
 /.idea/libraries
 /.idea/modules.xml
 /.idea/workspace.xml
+/.idea/misc.xml
+/.idea/gradle.xml
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
 .DS_Store
